[gd_scene load_steps=14 format=3 uid="uid://bxfomhc8d0je3"]

[ext_resource type="Script" uid="uid://cbxteaswddf8j" path="res://planet.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://hevkdf8sy6g7" path="res://parameters.gd" id="2_0xm2m"]
[ext_resource type="Shader" uid="uid://buadbseghxws6" path="res://terrain.gdshader" id="2_h2yge"]
[ext_resource type="Shader" uid="uid://c52dgl78i4wij" path="res://water.gdshader" id="3_1bvp3"]

[sub_resource type="Environment" id="Environment_h2yge"]
background_mode = 1
background_color = Color(0.00183333, 0, 0.01, 1)
ambient_light_source = 2
ambient_light_color = Color(0.197937, 0.197937, 0.197937, 1)
tonemap_mode = 2
sdfgi_read_sky_light = false
sdfgi_bounce_feedback = 1.99
glow_enabled = true

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0xm2m"]
noise_type = 3
seed = 4
frequency = 1.0
fractal_lacunarity = 3.255

[sub_resource type="Gradient" id="Gradient_h2yge"]
offsets = PackedFloat32Array(0.00689655, 0.462069, 0.603448, 0.689655, 0.958621)
colors = PackedColorArray(0.89, 0.878578, 0.2047, 1, 0.362667, 0.68, 0.136, 1, 0.45, 0.105, 0, 1, 0.68, 0.565307, 0.5304, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1bvp3"]
gradient = SubResource("Gradient_h2yge")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1bvp3"]
render_priority = 0
shader = ExtResource("2_h2yge")
shader_parameter/specular = 0.8
shader_parameter/roughness = 0.8
shader_parameter/radius = 10.0
shader_parameter/height = 4.0
shader_parameter/gradient = SubResource("GradientTexture1D_1bvp3")

[sub_resource type="Gradient" id="Gradient_1bvp3"]
offsets = PackedFloat32Array(0, 0.227586, 0.572414, 0.941379)
colors = PackedColorArray(0.63, 1, 0.956833, 1, 0.1404, 0.3068, 0.39, 1, 0.124, 0.1736, 0.31, 1, 0.096, 0.109867, 0.2, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lquwl"]
gradient = SubResource("Gradient_1bvp3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h2yge"]
render_priority = 0
shader = ExtResource("3_1bvp3")
shader_parameter/specular = 0.8
shader_parameter/roughness = 0.8
shader_parameter/radius = 10.0
shader_parameter/level = 11.23
shader_parameter/gradient = SubResource("GradientTexture1D_lquwl")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bvp3"]
bg_color = Color(0.16, 0.16, 0.16, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_detail = 20

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h2yge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.382683, 0.92388, 0, 0.923879, 0.382684, -0.999999, 1.67276e-08, -4.03841e-08, 0, 0, 0)
shadow_enabled = true

[node name="Planet" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_ig7tw")
detail = 256
noise = SubResource("FastNoiseLite_0xm2m")
height = 4.0
rotation_speed = 0.1
water_level = 0.8445
terrain_material = SubResource("ShaderMaterial_1bvp3")
water_material = SubResource("ShaderMaterial_h2yge")

[node name="Terrain" type="MeshInstance3D" parent="Planet"]

[node name="Water" type="MeshInstance3D" parent="Planet"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 25)
fov = 70.0
far = 300.0

[node name="Parameters" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_0xm2m")

[node name="Panel" type="Panel" parent="Parameters"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -32.0
offset_top = 32.0
offset_right = 504.0
offset_bottom = -32.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1bvp3")

[node name="MarginContainer" type="MarginContainer" parent="Parameters/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Parameters/Panel/MarginContainer"]
layout_mode = 2

[node name="RotationLabel" type="Label" parent="Parameters/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Rotation"

[node name="RotationSlider" type="HSlider" parent="Parameters/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.0
value = 1.0

[node name="_empty" type="Label" parent="Parameters/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="Parameters/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Generate"

[connection signal="value_changed" from="Parameters/Panel/MarginContainer/VBoxContainer/RotationSlider" to="Parameters" method="_on_rotation_slider_value_changed"]
[connection signal="pressed" from="Parameters/Panel/MarginContainer/VBoxContainer/GenerateButton" to="Parameters" method="_on_generate_button_pressed"]
